# ai-engineering-analytics

./: .gitignore  AGENTS.md  Cargo.toml  DEV.md  LICENSE  README.md  Taskfile.yml
.cargo/: config.toml
.github/workflows/: ci-release.yml  ci.yml  github-live.yml  release.yml
docs/: ARCHITECTURE.md  DATA_MODEL_MIGRATION_PROPOSAL.md  DATA_MODEL_MIGRATION_PROPOSAL_V2.md  METRIC_ENGINE_MIGRATION.md  conversation_codex.md
packaging/: INSTALL.md  RELEASE_NOTES.md
scripts/: sanitize_regression_fixtures.py
src/: analytics.rs  cli.rs  cursor_paths.rs  error.rs  events.rs  ingest_progress.rs  lib.rs  main.rs  path_utils.rs  sync.rs  sync_identity.rs
src/change_intel/: line_hash.rs  mod.rs  path_resolver.rs  pipeline.rs  schema.rs  session_context.rs  storage.rs  types.rs
src/commands/: associate_commits.rs  change.rs  delivery.rs  event_stream.rs  github.rs  ingest.rs  lifecycle.rs  mod.rs  quality.rs  report_layout.rs  report_scope.rs  session.rs  stats.rs  sync.rs  task_stats.rs  tui.rs
src/db/: mod.rs
src/github/: auth.rs  client.rs  mod.rs  sync.rs  types.rs
src/metrics/: quality.rs
src/providers/: mod.rs  utils.rs
tests/: github_live.rs  github_token_cli.rs  metrics_regression.rs
tests/snapshots/: metrics_regression__fixture_corpus_change_grouped_by_repo_text.snap  metrics_regression__fixture_corpus_change_report_structured.snap  metrics_regression__fixture_corpus_change_report_text.snap  metrics_regression__fixture_corpus_delivery_grouped_by_branch_claude_text.snap  metrics_regression__fixture_corpus_event_stream_all_smoke.snap  metrics_regression__fixture_corpus_lifecycle_report_text.snap  (+14 more)
(+22 files in other folders)
