[package]
name = "ai-engineering-analytics"
version = "0.1.0"
edition = "2024"
default-run = "paceflow"

[[bin]]
name = "paceflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
dirs = "6.0.0"
md5 = "0.8.0"
chrono = { version = "0.4.44", features = ["serde"] }
similar = "2"
terminal_size = "0.4"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["net", "rt", "sync", "time"] }

[dev-dependencies]
assert_cmd = "2.1.1"
insta = { version = "1.43.2", features = ["yaml"] }
tempfile = "3.23.0"

[profile.release]
debug = "line-tables-only"
